<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40sp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/favorite_icon"/>
            <TextView
                android:id="@+id/text_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                />
            <ImageView
                android:layout_marginLeft="48dp"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/group_icon"/>
            <TextView
                android:id="@+id/text_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">
            <TextView
                android:id="@+id/text_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/let_s_call_you"
                android:textSize="18sp"
                android:padding="6dp"
                android:background="@android:color/holo_blue_bright"
                />
            <TextView
                android:id="@+id/text_hey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hey"
                android:textSize="18sp"
                android:layout_marginLeft="32dp"
                android:padding="6dp"
                android:background="@android:color/holo_orange_dark"
                />
            <TextView
                android:id="@+id/text_how"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_are_you"
                android:textSize="18sp"
                android:layout_marginLeft="32dp"
                android:padding="6dp"
                android:background="@android:color/holo_red_light"
                />

        </LinearLayout>
        <Button
            android:id="@+id/button_video_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_chat_is_not_available"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/darker_gray"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:textColor="@color/purple"
            android:layout_gravity="center"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>